# index_protocol_program_phase1

./: Anchor.toml  README.md  package-lock.json
app/: .prettierrc  package-lock.json  package.json  run_solita.js  tsconfig.json
app/idl/: index_protocol_program.json
app/src/: constants.ts  main.ts  mint.ts  pda.ts
app/src/custom/: index.ts  protocolInstructions.ts  superAuthorityInstructions.ts
programs/index_protocol_program/: Cargo.toml
programs/index_protocol_program/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/index_protocol_program/src/processor/: close_minter_states.rs  deploy.rs  initialize_index_protocol_state.rs  mint.rs  mod.rs  update_index_protocol_state.rs  update_mint_config.rs
programs/index_protocol_program/src/state/: index_protocol_state.rs  mint_data_config.rs  minter_state.rs  mod.rs
